--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,8 +39,8 @@ jobs:
 
     - name: install golang-migrate
       run: |
-        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-arm64.tar.gz | tar xvz
-        sudo mv migrate /usr/bin/migrate
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.12.2/migrate.linux-arm64.tar.gz | tar xvz
+        sudo mv migrate.linux-amd64 /usr/bin/migrate
         which migrate
 
     - name: Run migrations
